k8s/prod/backcore-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backcore-deployment
  namespace: prod
  labels:
    app: backcore
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backcore
  template:
    metadata:
      labels:
        app: backcore
    spec:
      serviceAccountName: my-app-service-account
      containers:
        - name: greencity-backcore
          image: ghcr.io/roman-98/greencity-backcore:1.0.0-408d6ae
          ports:
            - containerPort: 8080
