k8s/prod/backuser-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backuser-deployment
  namespace: dev
  labels:
    app: backuser
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backuser
  template:
    metadata:
      labels:
        app: backuser
    spec:
      serviceAccountName: my-app-service-account
      containers:
        - name: greencity-backuser
          image: ghcr.io/roman-98/greencity-backuser:1.0.0-408d6ae
          ports:
            - containerPort: 8060
