k8s/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backcore-deployment
  namespace: prod
  labels:
    app: backcore
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backcore
  template:
    metadata:
      labels:
        app: backcore
    spec:
      containers:
        - name: greencity-backcore
          image: ghcr.io/roman-98/greencity-backcore:1.0.0-8a328d2
          ports:
            - containerPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backuser-deployment
  namespace: prod
  labels:
    app: backuser
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backuser
  template:
    metadata:
      labels:
        app: backuser
    spec:
      containers:
        - name: greencity-backuser
          image: ghcr.io/roman-98/greencity-backuser:1.0.0-8a328d2
          ports:
            - containerPort: 8060

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: prod
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: greencity-frontend
          image: ghcr.io/roman-98/greencity-frontend:1.0.0-8a328d2
          ports:
            - containerPort: 4200
