k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backcore-service
  namespace: prod
spec:
  selector:
    app: backcore
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: backuser-service
  namespace: prod
spec:
  selector:
    app: backuser
  ports:
    - protocol: TCP
      port: 8060
      targetPort: 8060
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: prod
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 4200
      targetPort: 4200
  type: LoadBalancer
