k8s/prod/network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-db-access
  namespace: prod 
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - backuser
          - backcore 
  policyTypes:
    - Egress
  egress:
    - to:
        - dnsName: "greencity.cdy6c040ysbs.eu-west-3.rds.amazonaws.com" 
      ports:
        - protocol: TCP
          port: 5432
